# gops

./: .gitignore  adjust_data.sh  append_energy_markov_dat.sh  change.sh  change_pbs.sh  end.sh  eo_pars.sh  extract_energies_from_lowest.sh  f.sh  gp_loop_over_dat.sh  i  inf  loop_forces.sh  pl  plot_arg.sh  prelim.sh  q0  r  r_print_help_end.sh  r_print_help_gmin.sh  r_print_help_header.sh  r_print_help_opts.sh  r_print_help_pars.sh  read_cmd_args.sh  reset_files.sh  rr0  rrr_switch_mode.sh  sb  sb_set_pars.sh  set_gmin_pars.sh  set_output_pars.sh  set_pref.sh  set_rrr_pars.sh  sh_template.sh  sub.sh  sub_sh_set_pars.sh  switch_mode.sh  vf  vf~  vo  (+2 more)
B/: B  GMINdump.f90  accrej.f90  bln.ce.inc.f90  bln.cic.inc.f90  bln.f90  bln.go.ab.inc.f90  bln.go.connect.inc.f90  bln.grad.bangle.inc.f90  bln.grad.inc.f90  bln.grad.nbond.inc.f90  bln.hess.inc.f90  bln.ntype.inc.f90  bln.param.inc.f90  bln.vars.inc.f90  c.mc.f90  c.takestep.f90  centrecom.f  checkd.f90  commons.f90  comp.mk  deb.calc_energy.i.f90  deb.calc_gradient.i.f90  deb.ebln_e.i.f90  deb.ebln_g.i.f90  deps.mk  dprand.f  dump.f90  dv.f90  f.f90  finalio.f90  finalq.f  finalq.f90  fmt.i.f90  g46.f90  g46merdiff.f  g46merdiff.f90  iom.f90  keepsym.f90  kw.f90  (+27 more)
DISCONNECT/: makefile
DOC/: GMINdoc.bib  OPTIM.tex  bookmarks.tex  makefile  repdoc.bib  wdoc  wg.disconnect.tex  wg.end.tex  wg.gmin.tex  wg.mod.tex  wg.nc.tex  wg.optim.tex  wg.pathsample.tex  wg.ps.tex  wg.tex  wg.tr.tex  wgdoc.bib
G/: Ackland_metals.f90  BLN.f  CMakeLists.txt  CSMinit.f90  FS.f  GMINdump.f90  Makefile.base  accrej.f90  amber9dummy.f90  amhdummy.f  base_source.in  basinsampling.f90  bln.am.inc.f90  bln.f90  bln.gen.f90  bln.go.ab.inc.f90  bln.num  bln.vars.inc.f90  bln_source.in  bspt.F  bsptsave.F  bulkmindist.f90  centre.f  chaperonin.f  chdummy.f  commons.f90  compress.f  countatoms.f90  dummyoptim.f90  enumerate.f90  f.f90  false.in  finalio.amberdump.i.f  finalio.f  finalio.f90  finalio.tipio.i.f  finalq.f  g46merdiff.f  ga_bln.f90  ga_cluster.f90  (+69 more)
G/AMH/: makefile
GMIN/: AT.f  Ackland_metals.f90  Ackland_wrapper.f  Alglue.f  BLJcluster.f  BLN.f  CSMinit.f90  DF1.f  EAMLJ_sub.f  EAMal.f  FS.f  Farkas.f  GMINdump.f90  Gupta.f  JM.f  LB2.f  MB.f  MSorig.f  MSorigc.f  MStrans.97.f  Makefile.op226  Mgglue.f  Natb.f  PachecoC60.f  Pbglue.f  Q4.f  SW.f  SiSW.f  Zetterling.f  amber9dummy.f90  amhdummy.f  asaoos.f90  basinsampling.f90  bipartite.f90  brent.f  bspt.F  bspt.f  capsid.f  centre.f  centrecom.f  (+157 more)
Gb/: .gdbinit  BLN.f  GMINdump.f90  c.takestep.f  centre.f  commons.f90  countatoms.f90  data.in  deps.mk  dff  dv.f90  false.in  finalio.f  finalq.f  func.f90  inc.mk  io.f90  io1.f90  keyword.dec.i.f  keyword.f  keyword.r.chmd.i.f  kw.f90  kw.pl  m  m.commons.f90  m.finalio.f  m.io1.f  m.main.f  m.takestep.f  main.f  mc.f  mc.f90  mc1.f  mc1.f90  mcruns.f  mylbfgs.G.f  mylbfgs.f  np  nu.mk  num.in  (+14 more)
Gbln/: data.in  false.in  finalio.amberdump.i.f  keyword.dec.i.f  keyword.init.i.f  makefile  n.BLN.f  n.commons.f90  n.countatoms.f90  n.finalio.f  n.finalq.f  n.g46merdiff.f  n.input.f  n.io1.f  n.keyword.f  n.main.F  n.mc.F  n.mcruns.f  n.modhess.f90  n.mylbfgs.f  n.p46merdiff.f  n.potential.f  n.sv.f90  n.takestep.f  num.in  nuv.in  source.in  t.mk  true.in  v
INCLUDE/: Makefile.gmin.charmm  Makefile.gmin.dep  Makefile.gmin.gfortran  Makefile.gmin.ifort  Makefile.gmin.nag  Makefile.gmin.pgi  Makefile.gmin.rules  Makefile.pathsample.dep  def  make.inc  mkf  targets
O/: Clatmin.f  PV.f  SiO2.f  comfun.pl  deps.mk  dftb.f  ectrap.f  fetchz.f  ff90  gsdata.f90  intbeig.f  meccano.f90  mied.f  miel.f  old.mk  p46merdiff.f  rca.f90  repelsp.f  rigidfuncs.f  tags  upcase.pl
OPTIM/: 2Dfunc.f  Ackland_metals.f90  Ackland_wrapper.f  BLN.f  Clatmin.f  DF1.f  EYtrap.f  GoOptim.f  Gupta.f  H2O.pjt2.f  JM.f  MB.f  Natb.f  OPTIM.F  PV.f  PachecoC60.f  SD.f90  SW.f  SiO2.f  TIPmodes.f  VRTMCY5f.f90  Z2faster.f  Zetterling.f  adm.f  amb_natinterns.f90  amber.f  amber9dummy.f90  amberdummy.f  ambnatintern_extras.f90  amhdummy.f  amhglobals.f  axdiff.f  axpairs.f  aziz.f  bbrsdm.f90  beig.f  bfgsts.f  bhinterp.f90  binaryio.f90  bisect.f90  (+199 more)
P/: Cv.f  DOS.f  (+97 more)
(+962 files in other folders)
